class SriLankaLocations {
  static const List<String> districts = [
    'Ampara',
    'Anuradhapura',
    'Badulla',
    'Batticaloa',
    'Colombo',
    'Galle',
    'Gampaha',
    'Hambantota',
    'Jaffna',
    'Kalutara',
    'Kandy',
...
    'Colombo': [
      'Colombo 01',
      'Colombo 03',
      'Colombo 05',
      'Colombo 07',
      'Dehiwala',
      'Nugegoda',
      'Maharagama',
      'Rajagiriya',
      'Battaramulla',
      'Kotte',
      'Mount Lavinia',
    ],
...
